--- a/typeScript/tsconfig.json
+++ b/typeScript/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "include": [
+    "./ts_lang/**/*"
+  ],
+  //  "exclude": [
+  //    "./ts_lang/main.ts"
+  //  ],
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
